--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,4 @@
 services:
-  # MySQL 데이터베이스
-  mysql:
-    image: mysql:8.0
-    container_name: mysql-db
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: sketch_app
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: "1234"
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-    networks:
-      - app-network
-    command: --default-authentication-plugin=mysql_native_password
-
   # Spring Boot 애플리케이션
   app:
     build: .
@@ -25,12 +7,12 @@ services:
     # 외부 포트 노출 제거 - nginx를 통해서만 접근
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/sketch_app?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+      - SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/sketch_app?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=1234
       - ALLOWED_ORIGINS=https://yonsei-sketch.kro.kr,http://localhost:3001
-    depends_on:
-      - mysql
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - app-network
 
@@ -62,10 +44,6 @@ services:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
-# 볼륨 설정 (MySQL 데이터 영구 저장)
-volumes:
-  mysql_data:
 
 # 네트워크 설정 (컨테이너 간 통신)
 networks:
