걍 ec2로컬에서 돌림

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,9 +27,9 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    # 업스트림 정의 (Spring Boot 앱)
+    # 업스트림 정의 (Spring Boot 앱 - 호스트에서 직접 실행)
     upstream spring_app {
-        server app:8080;
+        server localhost:8080;
     }
 
     # HTTP -> HTTPS 리다이렉트
@@ -61,12 +61,6 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
-
-        # 보안 헤더
-        add_header Strict-Transport-Security "max-age=63072000" always;
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
 
         # 프록시 설정
         location / {
