--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,9 +27,9 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 
-    # 업스트림 정의 (Spring Boot 앱 - 호스트에서 직접 실행)
+    # 업스트림 정의 (Spring Boot 앱 - Docker 컨테이너)
     upstream spring_app {
-        server localhost:8080;
+        server app:8080;
     }
 
     # HTTP -> HTTPS 리다이렉트
