--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,35 @@
+version: '3.8'
+
 services:
   # Spring Boot 애플리케이션
   app:
     build: .
-    container_name: spring-app
-    restart: always
-    # 외부 포트 노출 제거 - nginx를 통해서만 접근
+    container_name: sketch_app
+    ports:
+      - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-      - SPRING_DATASOURCE_URL=jdbc:mysql://host.docker.internal:3306/sketch_app?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-      - SPRING_DATASOURCE_USERNAME=admin
-      - SPRING_DATASOURCE_PASSWORD=1234
-      - ALLOWED_ORIGINS=https://yonsei-sketch.kro.kr,http://localhost:3001
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     networks:
-      - app-network
+      - sketch_network
+    restart: unless-stopped
 
-  # Nginx 웹서버 (리버스 프록시 + SSL)
+  # Nginx 리버스 프록시
   nginx:
     image: nginx:alpine
-    container_name: nginx-proxy
-    restart: always
+    container_name: sketch_nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/letsencrypt:ro
+      - ./nginx/html:/var/www/certbot:ro
     depends_on:
       - app
     networks:
-      - app-network
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-
-  # Certbot for SSL certificates
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
+      - sketch_network
     restart: unless-stopped
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
-# 네트워크 설정 (컨테이너 간 통신)
 networks:
-  app-network:
+  sketch_network:
     driver: bridge 
