--- a/sketch-app.service
+++ b/sketch-app.service
@@ -17,6 +17,7 @@ SyslogIdentifier=sketch-app
 # 환경 변수
 Environment=SPRING_PROFILES_ACTIVE=prod
 Environment=JAVA_OPTS="-Xms512m -Xmx1024m"
+Environment=CLAUDE_API_KEY=${CLAUDE_API_KEY}
 
 [Install]
 WantedBy=multi-user.target 
