--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ logging:
 # CORS 설정 (로컬 서버 + 외부 접속용)
 cors:
   allowed-origins: ${ALLOWED_ORIGINS:https://yonsei-sketch.kro.kr,http://yonsei-sketch.kro.kr,http://localhost:3001}
-  allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+  allowed-methods: GET,POST,PUT,PATCH,DELETE,OPTIONS
   allowed-headers: "*"
   allow-credentials: true
 
